Set up mql connection

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://Etubaba:Mun2la@@@cluster0.i21aqyf.mongodb.net/orderingmicroapp"
+ORDER_PORT=3000
+
+RABBIT_MQ_URI=amqp://rabbitmq:5672
+RABBIT_MQ_BILLING_QUEUE='billing'
+
+
