--- a/package.json
+++ b/package.json
@@ -24,14 +24,22 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^10.2.7",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.5.2",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.3",
+    "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "joi": "^17.11.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -40,9 +48,12 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.5",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.12",
+    "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
