--- a/.env
+++ b/.env
@@ -9,5 +9,9 @@ ORDER_PORT=3000
 
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_BILLING_QUEUE='billing'
+RABBIT_MQ_AUTH_QUEUE='auth'
+
+JWT_SECRET="fagi"
+JWT_ACCEESS_EXPIRES_IN="24h"
 
 
